src/objects/Apttus_Revenue2__Agreement_Prepay_Trueup__c.object
<CustomObject>
    <description>Holds the many to many relationships between agreement prepay and agreement trueup objects</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Prepay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement prepay</description>
        <inlineHelpText>Associated agreement prepay</inlineHelpText>
        <label>Agreement Prepay</label>
        <referenceTo>Apttus_Revenue2__Agreement_Prepay__c</referenceTo>
        <relationshipLabel>Agreement Prepay-Trueup</relationshipLabel>
        <relationshipName>Agreement_Prepay_Trueup_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Trueup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement trueup</description>
        <inlineHelpText>Associated agreement trueup</inlineHelpText>
        <label>Agreement Trueup</label>
        <referenceTo>Apttus_Revenue2__Agreement_Trueup__c</referenceTo>
        <relationshipLabel>Agreement Prepay-Trueup</relationshipLabel>
        <relationshipName>Agreement_Prepay_Trueup_T</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comitted_Amount__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Guaranteed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comitted Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Prepaid_Amount__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Prepaid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Agreement Prepay-Trueup</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Prepay-Trueup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Prepay-Trueup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>